feat: used *string to handle null description
